# config-reader

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
config_reader/: __init__.py  core.py
tests/: test_config_reader.py
